<resources>

    <string name="app_name">Music</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="back_btn">Back</string>
    <string name="total_songs">Total Songs:</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="favourite">Favourites</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="songs_name">Songs Name</string>
    <string name="_00_00">00:00</string>
    <string name="folder_name">Folder Name</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_name">Playlist Name</string>
    <string name="your_name">Your Name</string>
    <string name="enjoy_time">Enjoy Time</string>
    <string name="add_song">Add Songs</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Songs</string>
    <string name="set_theme">Set Theme\n</string>
    <string name="sort_by">Sort by</string>
    <string name="version_name">Version Name</string>
    <string name="send">Send</string>
    <string name="welcome_to_nworld_of_music">Welcome to \nWorld of Music</string>
    <string name="muneeb_khalid">Muneeb Khalid</string>
    <string name="back">Back</string>

</resources>
