<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivSongs"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/tvSongsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/songs_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/tvFolderName"
        app:layout_constraintEnd_toStartOf="@+id/tvDurationSong"
        app:layout_constraintStart_toEndOf="@+id/ivSongs"
        app:layout_constraintTop_toTopOf="@+id/ivSongs" />

    <TextView
        android:id="@+id/tvFolderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/folder_name"
        android:textSize="14sp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/ivSongs"
        app:layout_constraintEnd_toStartOf="@+id/tvDurationSong"
        app:layout_constraintStart_toEndOf="@+id/ivSongs"
        app:layout_constraintTop_toBottomOf="@+id/tvSongsName" />

    <TextView
        android:id="@+id/tvDurationSong"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFolderName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSongsName" />

</androidx.constraintlayout.widget.ConstraintLayout>