<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muneeb.musicplayer.ui.activitys.PlaylistDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/enjoy_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImg"
            android:layout_width="200dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:src="@drawable/music" />

        <TextView
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/themeColor"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPlaylistDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDetails"
        tools:itemCount="3"
        tools:listitem="@layout/item_music" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnShuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="35dp"
        app:iconTint="?attr/themeColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="?attr/themeColor"
        app:strokeWidth="4dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddSongs"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_add"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableTint="?attr/themeColor" />

        <Button
            android:id="@+id/btnRemoveAll"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_remove"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableTint="?attr/themeColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>