<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:context="com.muneeb.musicplayer.ui.activitys.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <!--for buttons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btnShuffle"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/shuffle_btn"
                        android:drawableTop="@drawable/ic_shuffle"
                        android:text="@string/shuffle_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btnFavourite"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/playlist_btn"
                        android:drawableTop="@drawable/ic_favorite"
                        android:text="@string/favourites_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btnPlaylist"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/favourites_btn"
                        android:drawableTop="@drawable/ic_library_music"
                        android:text="@string/playlist_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/tvTotalSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_songs"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
                android:scrollbars="vertical"
                tools:itemCount="2"
                tools:listitem="@layout/item_music_main" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:name="com.muneeb.musicplayer.ui.fragments.NowPlayingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_now_playing" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
